--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <header >
+        <header class="box" >
             <img src="images/logo.png" alt= logo>
             <nav>
                 <a href="index.html">Home Page</a>
